--- a/sample.cabal
+++ b/sample.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ee15a8a6e31c8bb8e57b109494e6581bd7af991ce332ebbad873b7099ac9392a
+-- hash: 6c37a19950b7447bfba562f63984d00d4e3274f9d24f9a4104fe1ece1cb55a00
 
 name:           sample
 version:        0.1.0.0
@@ -27,27 +27,31 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Hoge
   other-modules:
       Paths_sample
   hs-source-dirs:
-      src
+      hoge
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , http-api-data
     , servant
+    , text
   default-language: Haskell2010
 
-executable sample-exe
+executable jque
   main-is: Main.hs
   other-modules:
       Paths_sample
   hs-source-dirs:
-      app
+      jque
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , sample
     , servant
+    , servant-js
+    , sample
   default-language: Haskell2010
 
 executable simple
